--- a/jsonrpc/pom.xml
+++ b/jsonrpc/pom.xml
@@ -51,9 +51,9 @@
 			<version>20090211</version>
 		</dependency>
 		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.13.0</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
